# passmanpp-cli

./: CMakeLists.txt  README.md  main.cpp  util.cpp  util.hpp
commands/: command.cpp  command.hpp  edit.cpp  edit.hpp  get.cpp  get.hpp  info.cpp  info.hpp  mkdb.cpp  mkdb.hpp  mkentry.cpp  mkentry.hpp  modify.cpp  modify.hpp  otp.cpp  otp.hpp  rm.cpp  rm.hpp
doc/: passman.1
